--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
         <div class="collapse navbar-collapse" id="navbarContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="#" class="nav-link">Welcome</a>
+              <a href="#Welcome" class="nav-link">Welcome</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Product</a>
+              <a href="#Product" class="nav-link">Product</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Contact</a>
+              <a href="#Contact" class="nav-link">Contact</a>
             </li>
           </ul>
         </div>
